fix alignment of the display field and faveicon added

--- a/src/component/App.scss
+++ b/src/component/App.scss
@@ -3,17 +3,17 @@ $color:rgb(255, 187, 0);
     margin: 0px;
     padding: 0px;
 }
-div{
+.button{
     margin: 20px;
 }
-#inp {
+#dir{
+    font-size: 30px;
     width: 260px;
     height: 50px;
-    border-color: black;
-    outline-color: black;
-    font-size: 30px;
     text-align: right;
-    padding-right: 10px;
+    border: 2px solid;
+    padding-right: 15px;
+    outline-color: black;
 }
 .rounded-circle {
     width: 60px;
